topics alignment solve

--- a/public/after_login/current_ui/css/style.css
+++ b/public/after_login/current_ui/css/style.css
@@ -940,7 +940,7 @@ border-color: #56b663;
     white-space: nowrap;
     text-overflow: ellipsis;
     margin: 0;
-    width: 125px;
+    width: 110px;
 }
 .exambox-heading h2{
     font-size: 13px;
